--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.900lbs.filedata",
   "version": "1.0.0",
   "displayName": "File Data",
-  "description": "Contains file data entities, which serve as reference objects to non-serialized objects in the Unity editor.",
+  "description": "A simple package that introduces file data entities, which serve as reference objects to non-serialized objects in the Unity editor.",
   "unity": "2018.3",
   "author": {
     "name": "Daniel Colina",
