--- a/Editor/900lbs.FileData.Editor.asmdef
+++ b/Editor/900lbs.FileData.Editor.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "900lbs.FileData.Editor",
     "references": [
-        "GUID:520dd65c81dced9479f05a63630a8930"
+        "900lbs.FileData"
     ],
     "includePlatforms": [
         "Editor"
